2001-07-03  Ezra Peisach  <epeisach@mit.edu>

	* ftpd.c (sgetpwnam): Remove local declaration of sgetsave.

2001-07-02  Ezra Peisach  <epeisach@mit.edu>

	* popen.c: Include ftpd_var.h.

	* ftpd.c: Declare secure_fprintf, gunique, sgetsave, sgetpwnam,
	path_expand static.

	* ftpd_var.h: Add prototypes for getline, renamefrom, ftpd_popen,
	ftpd_pclose.

	* ftpcmd.y: Declare lookup, copy and urgsafe_getc static.

2001-06-22  Ezra Peisach  <epeisach@mit.edu>

	* ftpcmd.y (help): Change local variable type to ftype.

	* ftpd.c (main): Local variable name changes to prevent shadowing
	of cp, sin, optarg.

2001-06-21  Ezra Peisach  <epeisach@mit.edu>

	* ftpd.c: If NEED_SETENV defined, prototype for setenv.
	(auth_data): radix_encode expects a int * and not a size_t *. Use
	temporary variable to pass data in and out.

2001-06-20  Ezra Peisach  <epeisach@mit.edu>

	* ftpd.c: Include gssapi/gssapi_krb5.h for gss_krb5_copy_ccache
	prototype. Provide prototype for yyparse.

2001-06-19  Ezra Peisach  <epeisach@mit.edu>

	* ftpcmd.y: Cleanup potential ambiguity between comparsion and
	pre-increment for a variable.

2001-06-15  Ezra Peisach  <epeisach@mit.edu>

	* ftpcmd.y, ftpd.c: Cast argument to isspace()/isdigit() to int.

	* secure.h (SESSION): Pass pointer to C_Block as expected by
	krb5_mk_priv().

2001-06-08  Mitchell Berger  <mitchb@mit.edu>

	* pathnames.h: _PATH_FTPUSERS renamed to _PATH_FTPUSERS_DEFAULT.

	* ftpd.c: Added '-U filename' option to allow specification of
	an ftpusers file other than the default.

	* ftpd.M: Documented the new -U option.

2001-06-06  Ezra Peisach  <epeisach@mit.edu>

	* ftpcmd.y: Include "ftpd_var.h" and remove prototype for reply()
	and lreply(). Add prototypes and declare as returning void
	sizecmd(), help() and yylex(). Cleanup assignments in
	conditionals.

	* ftpd.c: Include <grp.h> for initgroups() prototype. Move
	reply(), lreply() prototypes to ftpd_var.h (and include
	same). Include "krb524.h" for krb524_convert_creds_kdc()