@@ -1,3 +1,7 @@
+2001-07-04  Ezra Peisach  <epeisach@mit.edu>
+
+	* ftpd.c: Provide prototypes for myoob and lostconn. 
+
 2001-07-03  Ezra Peisach  <epeisach@mit.edu>
 
 	* ftpd.c (sgetpwnam): Remove local declaration of sgetsave.
